UPDATE: mobile overflow fixed.

--- a/styles.css
+++ b/styles.css
@@ -280,6 +280,7 @@ footer ul{
     }
     footer {
 	height: 100%;
+	overflow: hidden;
     }
     footer ul{
 	flex-direction: column;
